// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Loading centeredLoading 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 hOHba-d"
  >
    <div
      className="Loading__LoadingWrapper-sc-195w3kf-0 iBdrdZ"
    >
      <div
        className="Loading__Item-sc-195w3kf-1 beTUwW"
      />
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 hOHba-d"
  >
    <div
      className="Loading__LoadingWrapper-sc-195w3kf-0 iBdrdZ"
    >
      <div
        className="Loading__Item-sc-195w3kf-1 knLRSc"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Loading defaultLoading 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="Loading__LoadingWrapper-sc-195w3kf-0 iBdrdZ"
  >
    <div
      className="Loading__Item-sc-195w3kf-1 lhHtkV"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Loading invertedLoading 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="Box__BoxWrapper-jr1api-0 eFGCqk"
    data-testid={null}
  >
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 hOHba-d"
    >
      <div
        className="Loading__LoadingWrapper-sc-195w3kf-0 iBdrdZ"
      >
        <div
          className="Loading__Item-sc-195w3kf-1 jqyRqE"
        />
      </div>
    </div>
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 hOHba-d"
    >
      <div
        className="Loading__LoadingWrapper-sc-195w3kf-0 iBdrdZ"
      >
        <div
          className="Loading__Item-sc-195w3kf-1 bJFVQn"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Loading largeLoading 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="Loading__LoadingWrapper-sc-195w3kf-0 iBdrdZ"
  >
    <div
      className="Loading__Item-sc-195w3kf-1 fQoQjz"
    />
  </div>
</div>
`;

exports[`Storyshots Units/Loading Centered 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 hOHba-d"
  >
    <div
      className="Loading__LoadingWrapper-sc-195w3kf-0 iBdrdZ"
    >
      <div
        className="Loading__Item-sc-195w3kf-1 beTUwW"
      />
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 hOHba-d"
  >
    <div
      className="Loading__LoadingWrapper-sc-195w3kf-0 iBdrdZ"
    >
      <div
        className="Loading__Item-sc-195w3kf-1 knLRSc"
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Units/Loading Default Loading 1`] = `
<div
  className="Loading__LoadingWrapper-sc-195w3kf-0 iBdrdZ"
>
  <div
    className="Loading__Item-sc-195w3kf-1 lhHtkV"
  />
</div>
`;

exports[`Storyshots Units/Loading Inverted 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 eFGCqk"
  data-testid={null}
>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 hOHba-d"
  >
    <div
      className="Loading__LoadingWrapper-sc-195w3kf-0 iBdrdZ"
    >
      <div
        className="Loading__Item-sc-195w3kf-1 jqyRqE"
      />
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 hOHba-d"
  >
    <div
      className="Loading__LoadingWrapper-sc-195w3kf-0 iBdrdZ"
    >
      <div
        className="Loading__Item-sc-195w3kf-1 bJFVQn"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Units/Loading Large 1`] = `
<div
  className="Loading__LoadingWrapper-sc-195w3kf-0 iBdrdZ"
>
  <div
    className="Loading__Item-sc-195w3kf-1 fQoQjz"
  />
</div>
`;
